--- a/examples/camel-example-spring-boot/pom.xml
+++ b/examples/camel-example-spring-boot/pom.xml
@@ -77,6 +77,11 @@
       <artifactId>camel-commands-spring-boot</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-ahc</artifactId>
+    </dependency>
+
     <!-- testing -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
