--- a/examples/camel-example-spring-boot/src/main/resources/application.yml
+++ b/examples/camel-example-spring-boot/src/main/resources/application.yml
@@ -17,3 +17,10 @@
 
 spring.main.sources: org.apache.camel.example.spring.boot.MySpringBootRouter
 shell.auth.simple.user.password: password
+
+camel:
+  springboot:
+    allow-use-original-message: false
+  component:
+    ahc:
+      allow-java-serialized-object: true
