--- a/tooling/apt-spring-boot/pom.xml
+++ b/tooling/apt-spring-boot/pom.xml
@@ -6,9 +6,9 @@
   The ASF licenses this file to You under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with
   the License.  You may obtain a copy of the License at
-  
+
   http://www.apache.org/licenses/LICENSE-2.0
-  
+
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -17,59 +17,52 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.apache.camel</groupId>
-    <artifactId>camel-parent</artifactId>
+    <artifactId>tooling</artifactId>
     <version>2.18-SNAPSHOT</version>
-    <relativePath>../parent</relativePath>
   </parent>
 
-  <artifactId>tooling</artifactId>
-  <name>Camel :: Tooling</name>
-  <description>Camel Tooling</description>
-  <packaging>pom</packaging>
+  <artifactId>apt-spring-boot</artifactId>
+  <name>Camel :: Annotation Processor for Spring Boot</name>
+  <description>Processes Camel components to generate Spring Boot auto configuration files</description>
 
   <properties>
-    <camel.osgi.export.pkg />
   </properties>
 
-  <modules>
-    <module>parent</module>
-    <module>spi-annotations</module>
-    <module>apt</module>
-    <module>apt-spring-boot</module>
-    <module>maven</module>
-    <module>archetypes</module>
-    <module>camel-manual</module>
-  </modules>
+  <dependencies>
 
-  <!-- profiles>
-    <profile>
-      <id>build.manual</id>
-      <modules>
-        <module>camel-manual</module>
-      </modules>
-    </profile>
-    <profile>
-      <id>assembly</id>
-      <modules>
-        <module>camel-manual</module>
-      </modules>
-    </profile>
-    <profile>
-      <id>deploy</id>
-      <modules>
-        <module>camel-manual</module>
-      </modules>
-    </profile>
-    <profile>
-      <id>apache-release</id>
-      <modules>
-        <module>camel-manual</module>
-      </modules>
-    </profile>
-  </profiles -->
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>spi-annotations</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <!-- re-use spring-boot APT -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <version>${spring-boot-version}</version>
+    </dependency>
+
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>${jdk.version}</source>
+          <target>${jdk.version}</target>
+          <!-- Disable annotation processing for ourselves. -->
+          <proc>none</proc>
+          <verbose>false</verbose>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
