--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,7 @@
     <module>buildingtools</module>
     <module>camel-core</module>
     <module>components</module>
+    <module>components-starter</module>
     <module>tooling</module>
     <module>platforms</module>
     <module>tests</module>
