--- a/components/pom.xml
+++ b/components/pom.xml
@@ -39,6 +39,12 @@
       <version>${spring-boot-version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
+      <version>${spring-boot-version}</version>
+      <scope>provided</scope>
+    </dependency>
  </dependencies>
 
   <modules>
