Experiment with generating spring-boot auto configuration for the Camel components.

--- a/components/pom.xml
+++ b/components/pom.xml
@@ -346,7 +346,7 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-configuration-processor</artifactId>
           <version>${spring-boot-version}</version>
-          <optional>provided</optional>
+          <scope>provided</scope>
         </dependency>
       </dependencies>
     </profile>
